--- a/Include/Include.vcxproj.filters
+++ b/Include/Include.vcxproj.filters
@@ -47,5 +47,11 @@
     <ClInclude Include="ExtTypes.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Lib\XmlParserLib.h">
+      <Filter>头文件\Lib</Filter>
+    </ClInclude>
+    <ClInclude Include="Config.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
